# mygit

./: .gitignore
install/: local_setup.sh  setup.sh
install/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
install/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  traffic_bar_plugin.hpp  traffic_light_plugin.hpp  turtlebot3_drive.hpp
install/lib/graph_world/: world_gen.py
install/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/lib/turtlebot3_gazebo/: turtlebot3_drive
install/lib/turtlebot3_node/: turtlebot3_ros
install/share/graph_world/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/my_worlds/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/share/turtlebot3_example/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/graph_world/: CMakeLists.txt  edges.csv  nodes.csv
src/my_worlds/: CMakeLists.txt  spawn_random_boxes.py
(+526 files in other folders)
